<resources>
    <string name="app_name">Logo Smart</string>
    <string name="sovgani_oling">Ajoyib!\nMukofotni olish uchun qutilardan istalgan qutini tanlang!!!</string>
    <string name="Royxatdan_otish">Ro`yxatdan o`tish</string>
    <string name="asosiy_bolimga">Asosiy bo`limga o`tishni xohlaysizmi?</string>
    <string name="tafarq5">5ta farqni toping</string>
    <string name="barcha_farqlar">Siz barcha farqlarni muvaffaqiyatli topdingiz!</string>
    <string name="ta_farq">ta farq topdingiz!</string>
    <string name="Mashqlarni_bajarish">Mashqlarni bajarish uchun asosiy bo`limga qayting</string>
    <string name="Iltimos_malumotlarni">Iltimos ma\'lumotlarni to\'liq kiriting</string>
    <string name="Siz_oyinni_muvaffaqiyatli">Siz o\'yinni muvaffaqiyatli tugatdingiz!!</string>
    <string name="iltimos_kut">Iltimos kuting</string>
    <string name="Siz_barcha_rasmlarni">Siz barcha rasmlarni muvaffaqiyatli topdingiz!</string>
    <string name="asosiy_bolimga_qaytish">asosiy bo`limga qaytish</string>
    <string name="diqqatni_jamlash">Diqqatni jamlash o`yini</string>
    <string name="Sizga_2ta_birxil_rasm">Sizga 2ta birxil rasm taqdim etiladi va siz undan 4ta farqni topishingiz kerak!</string>
    <string name="boshladik">Boshladik</string>
    <string name="keyin">Keyinroq</string>
    <string name="asosiy_bolimdasiz">Asosiy bo`limdasiz</string>
    <string name="keyingi_bosqich">Keyingi bosqich</string>
    <string name="Suratda_keltirilgan_narsaning">Suratda keltirilgan narsaning nomini mikrofonni bosib ayting!</string>
    <string name="bosqich1">1-bosqich</string>
    <string name="bosqich2">2-bosqich</string>
    <string name="media_pipe">MediaPipe</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum hand results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing
        maximum hand results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of hand detect results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of hand detect results button</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the hand landmarker.</string>
    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_hand_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_hand_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_hand_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_num_hands">Number of Hands</string>
    <string name="label_delegate">Delegate</string>
    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <string name="label_face_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_face_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_face_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_num_faces">Number of Faces</string>
    <string name="lessons1">1-dars. "S" tovushini talaffuz qilish</string>
    <string name="lessons2">2-dars. Nutq ravon bo`lishi uchun maslahatlar</string>
    <string name="lessons3">3-dars. Ravon gapirish uchun tildagi muammolar</string>
    <string name="lessons4">4-dars. "R" tovushini talaffuz jarayoni </string>
    <string name="lessons5">5-dars. Uy sharoitida nutq rivojlanishi</string>
    <string name="agree">Men foydalanish shartlariga roziman</string>
    <string name="not_agree">Men foydalanish shartlariga rozi emasman</string>
    <string name="mashqlar_dialog">Ushbu bo`lim ustida ish olib borilmoqda.Boshqa mashqni bajarishni xohlaysizmi?</string>
    <string name="fragmentlar_dialog">Ushbu bo`limda texnik ishlar olib borilmoqda</string>
    <string name="kerakli_bolim">Kerakli bo`limni tanlang</string>
    <string name="Raqamingiz">Raqamingiz</string>
    <string name="diqqat">Diqqat!</string>
    <string name="ha">Ha</string>
    <string name="yoq">Yo`q</string>
    <string name="mashqi">mashqi</string>
    <string name="yuz_mimika">Yuz mimikasi</string>
    <string name="tabassum">Tabassum</string>
    <string name="lablar">Lablar</string>
    <string name="zarba">zarba</string>
    <string name="gulxan">gulxan</string>
    <string name="qushcha">qushcha</string>
    <string name="parovoz">parovoz</string>
    <string name="dubulga">dubulg`a</string>
    <string name="karvonc">karvoncha</string>
    <string name="iloncha">iloncha</string>
    <string name="argimchiq">arg`imchoq</string>
    <string name="kozmunchoq">ko`zmunchoq</string>
    <string name="quvnoq">quvnoq</string>
    <string name="piyola">piyola`a</string>
    <string name="bargcha">bargcha</string>
    <string name="kaktus">kaktus</string>
    <string name="maymuncha">maymuncha</string>
    <string name="aylana">aylana</string>
    <string name="undosh_tovushlar">Undoshlar ketma-ketligi</string>
    <string name="Murakkab">Murakkabroq so`zlar</string>
    <string name="Til_rivoj">Talaffuz uchun iboralar</string>
    <string name="dars_1">1-dars. Badantarbiya</string>
    <string name="dars_2">2-dars. Badantarbiya</string>
    <string name="dars_3">3-dars. Badantarbiya</string>
    <string name="otcha">Otcha</string>
    <string name="murabbo">Murabbo</string>
    <string name="quymoq">Quymoq</string>
    <string name="futbol">Futbol</string>
    <string name="soatcha">Soatcha</string>
    <string name="kozaynak">Ko\'zoynakcha</string>
    <string name="kapalak">Kapalakcha</string>
    <string name="baliqcha">Baliqcha</string>
    <string name="panjara">Panjara</string>
    <string name="argimchoq">Arg\'imchoq</string>
    <string name="unlilar">Unlilarni kuylash</string>
    <string name="m_harf">M harfi</string>
    <string name="maxsus_sozlar">R tovushiga oid so`zlar</string>
    <string name="kameraga_qarab_mashq">Kameraga qarab mashqni boshlang</string>
    <string name="xato_yuklash_rasm">Rasm yuklanishda xatolik</string>
    <string name="uzr">Noqulayliklar uchun uzr so`raymiz.</string>
    <string name="description_info">Ma`lumot</string>
    <string name="request_permission">Sizga kamera ruxsati kerak.</string>
    <string name="camera_error">Bu qurilma Kamera2 API qo`llab quvvatlamaydi.</string>
    <string name="todo">TODO</string>
    <string name="ma_lumotlar_mavjud_emas">Ma`lumotlar mavjud emas</string>
    <string name="logo_smart">Logo Smart</string>
    <string name="bolalar_bo_limi">Bolalar bo\'limi</string>
    <string name="mutaxassislar_bo_limi">Mutaxassislar bo\'limi</string>
    <string name="ota_onalar_bo_limi">Ota-onalar bo\'limi</string>
    <string name="ro_yxatdan_o_tish">Ro`yxatdan o`tish</string>
    <string name="Maxsus_parol">Maxsus parolni kiriting:</string>
    <string name="raqamingiz">Raqamingiz:</string>
    <string name="parolingiz">Parolingiz:</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="SplashScreen_name">LOGO SMART</string>
    <string name="rasm_yuklang">Rasm yuklang</string>
    <string name="ma_lumotlarni_saqlash">Ma`lumotlarni saqlash</string>
    <string name="ma_lumotlar_ro_yxatini_ko_rish">Ma`lumotlar ro`yxatini ko`rish</string>
    <string name="muassasa_nomi">Muassasa nomi:</string>
    <string name="hudud_nomi_bosh_harflar_bilan">Hudud nomi(bosh harflar bilan)</string>
    <string name="taklif_etiladigan_xizmatlar">Taklif etiladigan xizmatlar:</string>
    <string name="kun_tartibi">Kun tartibi:</string>
    <string name="mashg_ulot_olib_boriladigan_til">Mashg\'ulot olib boriladigan til:</string>
    <string name="ovqatlanish_ratsioni">Ovqatlanish ratsioni:</string>
    <string name="tarbiyalanuvchilar_soni">Tarbiyalanuvchilar soni:</string>
    <string name="oylik_to_lov_so_m">Oylik to`lov (so\'m):</string>
    <string name="ustunlik_jihatlari">Ustunlik jihatlari:</string>
    <string name="bonus_mavjud_bo_lsa">Bonus(mavjud bo\'lsa):</string>
    <string name="xavfsizlik_xizmati">Xavfsizlik xizmati:</string>
    <string name="bog_lanish_raqam">Bog\'lanish(raqam):</string>
    <string name="qo_shimcha_ma_lumotlar">Qo\'shimcha ma\'lumotlar:</string>
    <string name="tanlang">Tanlang:</string>
    <string name="bog_lanish">Bog\'lanish</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="ilova_yangiliklari">Ilova yangiliklari</string>
    <string name="bizning_jamoa">Bizning jamoa</string>
    <string name="Founder">Dilbar Shukurullayevna\n \nFalsafa fanlari doktori, Ijtimoiy media marketingi mutaxassisi!👩‍💻\n \nBog`lanish: +998901234567\n Telegram: @Anonym_user</string>
    <string name="android">Khasanov Samandar Loyiha menejeri \Mobil dasturchi</string>
    <string name="AI">Atamuratov Egambergan \n AI dasturchi</string>
    <string name="Backend">Nig\'matov Islomxo’ja \n CEO menejer va\nBackend web dasturchi</string>
    <string name="logoped">Shodmonova Fayoza\n Nutq terapevti</string>
    <string name="boglanish_manager">Bog\'lanish</string>
    <string name="artikulatsion_gimnastika">Artikulatsion gimnastika</string>
    <string name="nafas_mashqlari">Nafas mashqlari</string>
    <string name="tovushlar_talaffuzini_rivojlantirish">Tovushlar talaffuzini rivojlantirish</string>
    <string name="barmoqlar_neyrografiya_mashqlari">Barmoqlar neyrografiya mashqlari</string>
    <string name="yuz_mimikasini_rivojlantirish">Yuz mimikasini rivojlantirish</string>
    <string name="neyro_nrivojlantiruvchi_nbadantarbiya">Neyro \nrivojlantiruvchi \nbadantarbiya</string>
    <string name="daktil_alifbosi_va_imo_ishoralar">Daktil alifbosi \n imo-ishoralar</string>
    <string name="fonematik_idrok">Fonematik idrok</string>
    <string name="tafakkurni_rivojlantirish">Tafakkurni rivojlantirish</string>
    <string name="diqqatni_rivojlantirish">Diqqatni rivojlantirish</string>
    <string name="xususiy_bog_chalar_n_ro_yxatiga_qo_shilish">Xususiy bog\'chalar\n ro`yxatiga qo`shilish</string>
    <string name="shaxsiy_portfolio_yaratish">Shaxsiy portfolio yaratish</string>
    <string name="xususiy_maktablar_ro_yxatiga_qo_shilish">Xususiy maktablar ro`yxatiga qo`shilish</string>
    <string name="onlayn_konsultatsiya_xizmati">Onlayn konsultatsiya xizmati</string>
    <string name="mutaxassis_va_o_qituvchilar_nro_yxati">Mutaxassis va o\'qituvchilar \nro\'yxati</string>
    <string name="xususiy_maktablar_ro_yxati">Xususiy maktablar ro`yxati</string>
    <string name="xususiy_bog_chalar_ro_yxati">Xususiy bog\'chalar ro`yxati</string>
    <string name="shamni_pufla">Shamni pufla</string>
    <string name="parrakni_aylantir">Parrakni aylantir</string>
    <string name="pufakchani_uchir">Pufakchani uchir</string>
    <string name="gulni_hidla">Gulni hidla</string>
    <string name="futbol_koptogi">Futbol koptogi</string>
    <string name="egambergan">Atamuratov Egambergan</string>
    <string name="samandar">Hasanov Samandar</string>
    <string name="fayoza">Shodmonova Fayoza</string>
    <string name="islomxoja">Nig\'matov Islomxo`ja</string>
    <string name="tilni_o_zgartirish" translatable="false">Tilni o`zgartirish</string>
    <string name="bog_cha_nomi_bosh_harflarda" translatable="false">Bog\'cha nomi(Bosh harflarda):</string>
    <string name="hudud_nomini_kiriting" translatable="false">Hudud nomini kiriting:</string>
    <string name="mashg_ulotlar_olib_boriladigan_til" translatable="false">Mashg`ulotlar olib boriladigan til:</string>
    <string name="ma_lumotlarni_yangilash" translatable="false">Ma`lumotlarni yangilash</string>
</resources>