<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/rang2"
    android:orientation="vertical"
    tools:context=".Sqlite_KinderGarden.SqlActivity">



    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="20dp"

            >

            <ImageView
                android:id="@+id/imageViewfood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"

                android:src="@drawable/placeholde" />


        </com.google.android.material.card.MaterialCardView>


        <Button
            android:id="@+id/buttonchooseimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:backgroundTint="@color/btnstart"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:text="@string/rasm_yuklang" />


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonsavefood"
        android:layout_width="280dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/ma_lumotlarni_saqlash" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonviewfood"
        android:layout_width="280dp"
        app:cornerRadius="10dp"
        android:backgroundTint="#FF9800"
        android:textColor="@color/white"
        android:layout_height="70dp"
        android:text="@string/ma_lumotlar_ro_yxatini_ko_rish" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >


            <EditText
                android:id="@+id/editTextbogcha"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:hint="@string/muassasa_nomi" />

            <EditText
                android:id="@+id/editTextviloyat"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:hint="@string/hudud_nomi_bosh_harflar_bilan" />

            <EditText
                android:id="@+id/editTextxizmat"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:hint="@string/taklif_etiladigan_xizmatlar" />

            <EditText
                android:id="@+id/editTextkuntartib"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:hint="@string/kun_tartibi" />

            <EditText
                android:id="@+id/editTexttil"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:hint="@string/mashg_ulot_olib_boriladigan_til" />

            <EditText
                android:id="@+id/editTextratsion"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:hint="@string/ovqatlanish_ratsioni" />

            <EditText
                android:id="@+id/editTextbolasoni"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:hint="@string/tarbiyalanuvchilar_soni" />

            <EditText
                android:id="@+id/editTexttolovoy"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:inputType="number"
                android:background="@drawable/edittext_fon"
                android:hint="@string/oylik_to_lov_so_m" />

            <EditText
                android:id="@+id/editTextustunlik"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:hint="@string/ustunlik_jihatlari" />

            <EditText
                android:id="@+id/editTextbonus"
                android:layout_width="280dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:layout_height="wrap_content"
                android:hint="@string/bonus_mavjud_bo_lsa" />

            <EditText
                android:id="@+id/editTextxavfsizlik"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:hint="@string/xavfsizlik_xizmati" />

            <EditText
                android:id="@+id/editTextraqam"
                android:layout_width="280dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_fon"
                android:hint="@string/bog_lanish_raqam" />

            <EditText
                android:id="@+id/editTextqoshimcha"
                android:layout_width="280dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_fon"
                android:layout_height="wrap_content"
                android:hint="@string/qo_shimcha_ma_lumotlar" />



        </LinearLayout>



    </ScrollView>







</LinearLayout>