<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/background_color"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/dialogimagefood"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/placeholde" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/nomi"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/bog_cha_nomi_bosh_harflarda" />


            <EditText
                android:id="@+id/viloyat"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/hudud_nomini_kiriting" />

            <EditText
                android:id="@+id/xizmatlar"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/taklif_etiladigan_xizmatlar" />


            <EditText
                android:id="@+id/kun_tartib"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/kun_tartibi" />


            <EditText
                android:id="@+id/tili"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/mashg_ulotlar_olib_boriladigan_til" />


            <EditText
                android:id="@+id/ratsion"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_fon"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:hint="@string/ovqatlanish_ratsioni" />


            <EditText
                android:id="@+id/bola_soni"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/tarbiyalanuvchilar_soni" />


            <EditText
                android:id="@+id/tolov_oy"
                android:layout_width="280dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_height="wrap_content"
                android:hint="@string/oylik_to_lov_so_m" />


            <EditText
                android:id="@+id/ustunlik_jihat"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/ustunlik_jihatlari" />


            <EditText
                android:id="@+id/bonus"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/bonus_mavjud_bo_lsa" />


            <EditText
                android:id="@+id/xavfsizlik"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/xavfsizlik_xizmati" />


            <EditText
                android:id="@+id/raqam"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/bog_lanish" />


            <EditText
                android:id="@+id/qoshimcha_malumot"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_fon"
                android:gravity="center"
                android:hint="@string/qo_shimcha_ma_lumotlar" />

        </LinearLayout>


    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogupdatebutton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:cornerRadius="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/bgcolor"

        android:layout_marginTop="20dp"
        android:text="@string/ma_lumotlarni_yangilash" />


</LinearLayout>